# Snake

./: CMakeLists.txt  Makefile  README.md  list.c  main  main.c  main.py  snake.c
inc/: list.h  snake.h
src/: main.c  main.py
